<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.bmtc.android.DatabaseUpdateActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/commuter_update_legend"
            android:textSize="25sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_commuter_id_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commuter_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_commuter_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commuter_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/update_home_stop_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commuter_home_stop" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <MultiAutoCompleteTextView
                android:id="@+id/update_change_stops_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commuter_change_stops" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/update_destination_stop_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_commuter_destination_stop" />
        </android.support.design.widget.TextInputLayout>

        <!--Todo: add field for validity period with the option of selecting date-->

        <Button
            android:id="@+id/add_commuter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commuter_add_button_text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/reset_commuterFile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_commuterFile_button_text"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/conductor_update_legend"
            android:textSize="25sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_conductor_id_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_conductor_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_conductor_name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_conductor_name" />
        </android.support.design.widget.TextInputLayout>

        <RadioButton
            android:id="@+id/admin_perm_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="@android:drawable/btn_radio"
            android:drawablePadding="30dp"
            android:drawableRight="@android:drawable/btn_radio"
            android:text="@string/admin_permission_text" />

        <Button
            android:id="@+id/add_conductor_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conductor_add_button_text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/reset_conductorFile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_conductorFile_button_text"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>